--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>TPS - Perception Architecture (Preview v9)</title>
-  <link rel="stylesheet" href="Final.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="wrap">
@@ -729,6 +729,6 @@
 
   <!-- ========= END AUDIT OVERLAY ========= -->
 
-  <script src="Final.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
