--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/page-flip/dist/css/page-flip.min.css" />
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- PAGE WRAPPER -->
