--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/page-flip/dist/css/page-flip.min.css" />
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="Final1.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- PAGE WRAPPER -->
@@ -785,6 +785,6 @@
   <script src="https://cdn.jsdelivr.net/npm/page-flip/dist/js/page-flip.browser.min.js"></script>
 
   <!-- Main JS -->
-  <script src="Final1.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
